--- a/package.json
+++ b/package.json
@@ -10,20 +10,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
-    "@reduxjs/toolkit": "^1.9.0",
     "antd": "^4.23.2",
     "axios": "^0.24.0",
     "ms": "^2.1.3",
     "next": "latest",
-    "next-redux-wrapper": "^8.0.0",
     "qs": "^6.10.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.1.1",
-    "react-redux": "^8.0.5",
     "react-use-form-state": "^0.13.2",
-    "recharts": "2.1.8",
-    "redux-persist": "^6.0.0"
+    "recharts": "2.1.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
